--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,16 @@
 ---
+import AcercaDe from "../components/landing/AcercaDe.astro";
+import Hero from "../components/landing/Hero.astro";
+import Mas from "../components/landing/Mas.astro";
+import Novedades from "../components/landing/Novedades.astro";
+import Proyectos from "../components/landing/Proyectos.astro";
+import Layout from "../layouts/Layout.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout titulo="Home">
+	<Hero/>
+	<Mas/>
+	<Novedades/>
+	<AcercaDe/>
+	<Proyectos/>
+</Layout>
